<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/nav_main_screen"
        android:title="@string/main_screen"
        android:checkable="false" />

    <item android:id="@+id/nav_companies"
        android:title="@string/companies_page"
        android:checkable="false" />

    <item android:id="@+id/nav_about_us"
        android:title="@string/about_us_page"
        android:checkable="false" />

    <item android:id="@+id/nav_contact_us"
        android:title="@string/contact_us_page"
        android:checkable="false"/>

    <item android:id="@+id/nav_directions"
        android:title="@string/directions_page"
        app:showAsAction="never" />


</menu>