<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.parthsharma.no2expedition.LamborghiniPage">

        <TextView

            android:text="@string/lamborghini_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/lamborghinistart"
            android:id="@+id/Lstart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_below="@+id/title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <TextView
            android:text="@string/infoLh2"
            android:id="@+id/Lh2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_alignBottom="@+id/imageView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="13dp" />

        <TextView
            android:text="@string/infoLh3"
            android:id="@+id/Lh3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_alignBottom="@+id/imageView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/infoLh4"
            android:id="@+id/Lh4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_below="@+id/imageView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/huracan"
            android:adjustViewBounds="true"
            android:id="@+id/imageView"
            android:maxHeight="120dp"
            android:minHeight="0dp"
            android:layout_below="@+id/title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="25dp" />

        <TextView
            android:text="@string/infoLe1"
            android:id="@+id/Le1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_below="@+id/Lh4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="11dp" />

        <TextView
            android:text="@string/infoLGT2"
            android:id="@+id/GT2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_above="@+id/GT3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/infoLGT4"
            android:id="@+id/GT4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/infoLGT3"
            android:id="@+id/GT3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_above="@+id/GT4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/infoLe2"
            android:id="@+id/Le2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_above="@+id/Le3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/infoLe3"
            android:id="@+id/Le3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_below="@+id/imageView1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/infoLGT"
            android:id="@+id/GT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_alignTop="@+id/imageView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/infoLe4"
            android:id="@+id/Le4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_below="@+id/Le3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/estoque"
            android:adjustViewBounds="true"
            android:id="@+id/imageView1"
            android:maxHeight="120dp"
            android:layout_below="@+id/Lh4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/infoLh1"
            android:id="@+id/cartitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_below="@+id/Lstart"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/tfgt"
            android:adjustViewBounds="true"
            android:id="@+id/imageView2"
            android:maxHeight="125dp"
            android:layout_above="@+id/GT3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


</RelativeLayout>


